fx2j-parser/src/test/resources/element/valid/property-attribute.fxml
<?import javafx.scene.layout.VBox?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <properties foo="123"/>
</VBox>