fx2j-parser/src/test/resources/element/invalid/property-non-common-attribute.fxml
<?import javafx.scene.layout.VBox?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <properties fx:id="123"/>
</VBox>